@@ -13,6 +13,8 @@ debci (0.6) UNRELEASED; urgency=medium
     servers.
   * Eliminate check_version() and take this information from autopkgtest's
     output.
+  * Move report_status() into lib/functions.sh as we'll need it in more places
+    than just process-package.
 
  -- Martin Pitt <mpitt@debian.org>  Sat, 05 Apr 2014 12:18:39 +0100
 
